Finished makefile, but it needs to be tested

--- a/Project/makefile
+++ b/Project/makefile
@@ -1,4 +1,4 @@
-.PHONY: newenv basesetup clean
+.PHONY: newenv basesetup download 
 
 newenv:
 	pip install --user pipenv
@@ -7,10 +7,14 @@ newenv:
 inlibraries:
 	pip install -r requirements.txt
 
-basesetup:
-	python download.py -u -o ./Data
-	python cleandata.py -o ./Data/cleanData.csv
-	python histograms.py -i ./Data/cleanData.csv -d
+basesetup: baseclean
+	pipenv run python3 cleandata.py -o ./Data/cleanData.csv
+
+baseclean: download
+	pipenv run python3 python histograms.py -i ./Data/cleanData.csv -d
+
+download:
+	pipenv run python3 python download.py -u -o ./Data
 
 clean:
 	rm ./Data/*.png ./Data/data_for*
