created checkfs.sh as a plan b

--- a/Project/makefile
+++ b/Project/makefile
@@ -1,24 +1,22 @@
-.PHONY: newenv basesetup download 
+.PHONY: all newenv basesetup baseclean bashrun download clean
+
+all: newenv baseclean basesetup
 
 newenv:
 	pip install --user pipenv
 	pipenv install
 
-inlibraries:
-	pip install -r requirements.txt
-
 basesetup: baseclean
-	pipenv run python3 cleandata.py -o ./Data/cleanData.csv
+	pipenv run python3 histograms.py -i ./Data/cleanData.csv -d
 
 baseclean: download
-	pipenv run python3 python histograms.py -i ./Data/cleanData.csv -d
+	pipenv run python3 cleandata.py -o ./Data/cleanData.csv
+
+bashrun:
+	/bin/bash checkfs.sh
 
 download:
-	pipenv run python3 python download.py -u -o ./Data
+	pipenv run python3 download.py -u -o ./Data
 
 clean:
 	rm ./Data/*.png ./Data/data_for*
-
-deepclean:
-	rm ./Data/*
-
