Fixed test.py and started presentation file

--- a/Project/makefile
+++ b/Project/makefile
@@ -10,7 +10,7 @@ basesetup: baseclean
 	pipenv run python3 histograms.py -i ./Data/cleanData.csv -d
 
 baseclean: download
-	pipenv run python3 cleandata.py -o ./Data/cleanData.csv
+	pipenv run python3 cleandata.py -o ./Data/cleanData.csv -i ./Data/googleplaystore.csv
 
 bashrun:
 	/bin/bash checkfs.sh
