--- a/Project/requirements.txt
+++ b/Project/requirements.txt
@@ -1,17 +1,21 @@
 atomicwrites==1.3.0
 attrs==19.1.0
+bokeh==1.2.0
 certifi==2019.3.9
 chardet==3.0.4
 cycler==0.10.0
 idna==2.8
 importlib-metadata==0.18
+Jinja2==2.10.1
 kaggle==1.5.4
 kiwisolver==1.1.0
+MarkupSafe==1.1.1
 matplotlib==3.1.0
 more-itertools==7.0.0
 numpy==1.16.4
 packaging==19.0
 pandas==0.24.2
+Pillow==6.0.0
 pkg-resources==0.0.0
 pluggy==0.12.0
 py==1.8.0
@@ -20,11 +24,13 @@ pytest==4.6.3
 python-dateutil==2.8.0
 python-slugify==3.0.2
 pytz==2019.1
+PyYAML==5.1.1
 requests==2.22.0
 scipy==1.3.0
 seaborn==0.9.0
 six==1.12.0
 text-unidecode==1.2
+tornado==6.0.2
 tqdm==4.32.1
 urllib3==1.24.3
 wcwidth==0.1.7
