corrected make file

--- a/Project/makefile
+++ b/Project/makefile
@@ -3,7 +3,7 @@
 all: newenv baseclean basesetup postprocessing
 
 newenv:
-	pip install --user pipenv
+	pip install pipenv
 	pipenv install
 
 basesetup: baseclean
