updated Pipfiles to include Bokeh library

--- a/Project/Pipfile
+++ b/Project/Pipfile
@@ -11,6 +11,9 @@ kaggle = "*"
 seaborn = "*"
 argparse = "*"
 matplotlib = "*"
+bokeh = "*"
+numpy = "*"
+scipy = "*"
 
 [requires]
 python_version = "3.7"
