Added kagglecheck.sh to create the kaggle key

--- a/Project/makefile
+++ b/Project/makefile
@@ -18,6 +18,8 @@ postprocessing: baseclean
 bashrun:
 	/bin/bash checkfs.sh
 
-download:
+download: kagglecheck
 	pipenv run python3 download.py -u -o ./Data
 
+kagglecheck:
+	/bin/bash kagglecheck.sh
