fixed makefile by transfering geoviews graph to another script

--- a/Project/Pipfile
+++ b/Project/Pipfile
@@ -6,16 +6,14 @@ verify_ssl = true
 [dev-packages]
 
 [packages]
-pandas = "*"
 kaggle = "*"
-seaborn = "*"
-argparse = "*"
 matplotlib = "*"
+seaborn = "*"
+pandas = "*"
 bokeh = "*"
-numpy = "*"
-scipy = "*"
+argparse = "*"
 holoviews = "*"
-geoviews = "*"
+cycler = "*"
 
 [requires]
 python_version = "3.7"
