--- a/Project/requirements.txt
+++ b/Project/requirements.txt
@@ -1,9 +1,10 @@
 atomicwrites==1.3.0
 attrs==19.1.0
 bokeh==1.2.0
-certifi==2019.3.9
+certifi==2019.6.16
 chardet==3.0.4
 cycler==0.10.0
+holoviews==1.12.3
 idna==2.8
 importlib-metadata==0.18
 Jinja2==2.10.1
@@ -15,7 +16,9 @@ more-itertools==7.0.0
 numpy==1.16.4
 packaging==19.0
 pandas==0.24.2
+param==1.9.1
 Pillow==6.0.0
+pipenv==2018.11.26
 pkg-resources==0.0.0
 pluggy==0.12.0
 py==1.8.0
@@ -24,6 +27,7 @@ pytest==4.6.3
 python-dateutil==2.8.0
 python-slugify==3.0.2
 pytz==2019.1
+pyviz-comms==0.7.2
 PyYAML==5.1.1
 requests==2.22.0
 scipy==1.3.0
@@ -31,7 +35,9 @@ seaborn==0.9.0
 six==1.12.0
 text-unidecode==1.2
 tornado==6.0.2
-tqdm==4.32.1
+tqdm==4.32.2
 urllib3==1.24.3
+virtualenv==16.6.1
+virtualenv-clone==0.5.3
 wcwidth==0.1.7
 zipp==0.5.1
